use position absolute on banner to avoid scrollbars

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -5,9 +5,13 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: calc(100vh + 70px);
-  margin: -70px 0 0 0;
+  margin: 0;
   padding: 0;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   display: flex;
   justify-content: center;
   align-items: center;
